testing/tests/melt/negative/stmt_type_if_1.c
struct foo { } bar;

void f() {

  if(bar) ; // `scalar`

}
